test-aws/aws_configs/ap-northeast-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-49a1072d",
     "NetworkAclId": "acl-d06201b5",
     "SubnetId": "subnet-ae8be0d9"
    },
    {
     "NetworkAclAssociationId": "aclassoc-48a1072c",
     "NetworkAclId": "acl-d06201b5",
     "SubnetId": "subnet-a8f674f1"
    },
    {
     "NetworkAclAssociationId": "aclassoc-c14e8aba",
     "NetworkAclId": "acl-d06201b5",
     "SubnetId": "subnet-04e5be2c"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-d06201b5",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-2c22b549"
  }
 ]
}
